deploy/k8s/30-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nova-ingress
  namespace: nova
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"   # large asset uploads
spec:
  ingressClassName: nginx
  rules:
    - host: nova.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: nova-web, port: { number: 80 } }
          - path: /api
            pathType: Prefix
            backend:
              service: { name: nova-api, port: { number: 80 } }
          - path: /hubs
            pathType: Prefix
            backend:
              service: { name: nova-api, port: { number: 80 } }
